...
    <string name="category_delete_confirm">Elimina</string>
    <string name="task_more_actions">Altre azioni</string>
    <string name="task_manage_categories">Gestisci categorie</string>
    <string name="task_open_history">Cronologia completate</string>
    <string name="portability_menu_action">Backup e ripristino</string>
    <string name="portability_title">Backup e ripristino</string>
    <string name="portability_back">Indietro</string>
    <string name="portability_create_backup">Crea backup</string>
    <string name="portability_restore_backup">Ripristina backup</string>
    <string name="portability_summary_created">Backup creato il %1$s</string>
    <string name="portability_summary_counts">%1$s, %2$s, %3$s, %4$s</string>
    <string name="portability_replace_title">Sostituire i dati attuali?</string>
    <string name="portability_replace_warning">Tutte le categorie, le attività e le sottoattività attuali verranno sostituite dal backup. Non è possibile annullare.</string>
    <string name="portability_replace_confirm">Sostituisci</string>
    <string name="portability_replace_cancel">Annulla</string>
    <string name="portability_backup_created">Backup creato.</string>
    <string name="portability_restore_completed">Backup ripristinato.</string>
    <string name="portability_restore_reminder_warning">Backup ripristinato. Alcuni promemoria potrebbero essere aggiornati al prossimo avvio.</string>
    <string name="portability_error_invalid_backup">Il file selezionato non è un backup valido.</string>
...
